k8s/namespace.yaml
# Copyright 2024 The Mothership Authors
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: mothership
