k8s/worker.yaml
# Copyright 2024 The Mothership Authors
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mothership-worker-deployment
  namespace: mothership
spec:
  selector:
    matchLabels:
      app: mothership-worker
  template:
    metadata:
      labels:
        app: mothership-worker
    spec:
      serviceAccountName: mothership
      containers:
        - name: mothership-worker
          image: github.com/openela/mothership/cmd/mship_worker_server
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
