k8s/admin-api.yaml
# Copyright 2024 The Mothership Authors
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mothership-admin-api-deployment
  namespace: mothership
spec:
  selector:
    matchLabels:
      app: mothership-admin-api
  template:
    metadata:
      labels:
        app: mothership-admin-api
    spec:
      serviceAccountName: mothership
      containers:
        - name: mothership-admin-api
          image: github.com/openela/mothership/cmd/mship_admin_server
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - name: grpc
              containerPort: 6687
            - name: http
              containerPort: 6688
---
apiVersion: v1
kind: Service
metadata:
  name: mothership-admin-api-service
  namespace: mothership
spec:
  selector:
    app: mothership-admin-api
  ports:
    - name: grpc
      protocol: TCP
      port: 6687
      targetPort: 6687
    - name: http
      protocol: TCP
      port: 6688
      targetPort: 6688
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mothership-admin-api-ingress
  namespace: mothership
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - imports.openela.org
      secretName: mothership-tls
  rules:
    - host: imports.openela.org
      http:
        paths:
          - path: /admin-api
            pathType: Prefix
            backend:
              service:
                name: mothership-admin-api-service
                port:
                  number: 6688
