k8s/api.yaml
# Copyright 2024 The Mothership Authors
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mothership-api-deployment
  namespace: mothership
spec:
  selector:
    matchLabels:
      app: mothership-api
  template:
    metadata:
      labels:
        app: mothership-api
    spec:
      serviceAccountName: mothership
      containers:
        - name: mothership-api
          image: github.com/openela/mothership/cmd/mship_server
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - name: grpc
              containerPort: 6677
            - name: http
              containerPort: 6678
---
apiVersion: v1
kind: Service
metadata:
  name: mothership-api-service
  namespace: mothership
spec:
  selector:
    app: mothership-api
  ports:
    - name: grpc
      protocol: TCP
      port: 6677
      targetPort: 6677
    - name: http
      protocol: TCP
      port: 6678
      targetPort: 6678
---
apiVersion: v1
kind: Service
metadata:
  name: mothership-grpc-service
  namespace: mothership
  annotations:
    konghq.com/protocol: "grpc"
spec:
  selector:
    app: mothership-api
  ports:
    - name: grpc
      protocol: TCP
      port: 6677
      targetPort: 6677
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mothership-api-ingress
  namespace: mothership
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - imports.openela.org
      secretName: mothership-tls
  rules:
    - host: imports.openela.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mothership-api-service
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mothership-grpc-ingress
  namespace: mothership
  annotations:
    konghq.com/protocols: "grpcs"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - imports.openela.org
      secretName: mothership-tls
  rules:
    - host: imports.openela.org
      http:
        paths:
          - path: /mothership.v1.SrpmArchiver
            pathType: Prefix
            backend:
              service:
                name: mothership-grpc-service
                port:
                  name: grpc
