k8s/ui.yaml
# Copyright 2024 The Mothership Authors
# SPDX-License-Identifier: Apache-2.0

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mothership-ui-deployment
  namespace: mothership
spec:
  selector:
    matchLabels:
      app: mothership-ui
  template:
    metadata:
      labels:
        app: mothership-ui
    spec:
      serviceAccountName: mothership
      containers:
        - name: mothership-ui
          image: ghcr.io/openela/mothership-ui
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - name: http
              containerPort: 9111
---
apiVersion: v1
kind: Service
metadata:
  name: mothership-ui-service
  namespace: mothership
spec:
  selector:
    app: mothership-ui
  ports:
    - name: http
      protocol: TCP
      port: 9111
      targetPort: 9111
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mothership-ui-ingress
  namespace: mothership
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "308"
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - imports.openela.org
      secretName: mothership-tls
  rules:
    - host: imports.openela.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mothership-ui-service
                port:
                  number: 9111
